--- a/app/src/main/res/layout/activity_slider_puzzle.xml
+++ b/app/src/main/res/layout/activity_slider_puzzle.xml
@@ -9,8 +9,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ca.awesome.travis.sliderpuzzle.SliderPuzzleActivity">
 
-    <TextView
+    <fragment
+        android:id="@+id/gameFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_centerVertical="true"
+        class="ca.awesome.travis.sliderpuzzle.GameFragment" >
+    </fragment>
+
+
+
 </RelativeLayout>
